src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Accessioning_Status__c</fullName>
        <description>Kit products only. Last Accessioning status received from lab.</description>
        <inlineHelpText>Last Accessioning status received from lab.</inlineHelpText>
        <label>Accessioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>HOLD</fullName>
                </value>
                <value>
                    <fullName>RETURN TO ACCESSIONING</fullName>
                </value>
                <value>
                    <fullName>FAILURE REVIEW</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analysis_Workflow__c</fullName>
        <description>Set on OP creation. Applies to kit products only. Required field for Sample Manifest export integration. 
(The format used is &lt;App&gt;&lt;App Version&gt;&lt;Workflow Tag&gt;&lt;Workflow version&gt;)</description>
        <inlineHelpText>Set on OP creation. Applies to kit products only. Required field for Sample Manifest export integration. 
(The format used is &lt;App&gt;&lt;App Version&gt;&lt;Workflow Tag&gt;&lt;Workflow version&gt;)</inlineHelpText>
        <label>Analysis Workflow</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <description>App ID used for HMAPI and NETSUITE</description>
        <inlineHelpText>App ID used for HMAPI and NETSUITE</inlineHelpText>
        <label>AppID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Partner_Account__c</fullName>
        <description>Partner Account supplying App Product</description>
        <formula>PricebookEntry.Product2.Partner_Account__r.Name</formula>
        <inlineHelpText>Partner Account supplying App Product</inlineHelpText>
        <label>App Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillTo_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required for Email Alerts triggered at the Order Item level.</description>
        <inlineHelpText>Required for Email Alerts triggered at the Order Item level.</inlineHelpText>
        <label>BillTo Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Products (BillTo Contact)</relationshipLabel>
        <relationshipName>Order_Products_BillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Box__c</fullName>
        <description>Location of kit in accessioning lab.</description>
        <inlineHelpText>Location of kit in accessioning lab.</inlineHelpText>
        <label>Box</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Shipping Carrier</description>
        <inlineHelpText>Shipping Carrier</inlineHelpText>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNA_Extraction_Completion_Date__c</fullName>
        <description>Date when DNA Extraction of a sample was completed</description>
        <inlineHelpText>Date when DNA Extraction of a sample was completed</inlineHelpText>
        <label>DNA Extraction Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNA_Extraction_Start_Date__c</fullName>
        <description>Date when DNA Extraction of a sample is started</description>
        <inlineHelpText>Date when DNA Extraction of a sample is started</inlineHelpText>
        <label>DNA Extraction Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Delivery_Date__c</fullName>
        <description>Date when Sample Status first switched to &quot;Data Delivered&quot;</description>
        <inlineHelpText>Date when Sample Status first switched to &quot;Data Delivered&quot;</inlineHelpText>
        <label>Data Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <formula>text(PricebookEntry.Product2.Delivery_Mode__c )</formula>
        <label>Delivery Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <description>Kit product specific. Failure reason selected by lab during accessioning.</description>
        <inlineHelpText>Failure reason selected by lab during accessioning.</inlineHelpText>
        <label>Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Volume</fullName>
                </value>
                <value>
                    <fullName>High Volume</fullName>
                </value>
                <value>
                    <fullName>No Preservative</fullName>
                </value>
                <value>
                    <fullName>Color Off / Opacity</fullName>
                </value>
                <value>
                    <fullName>Unknown Particulates</fullName>
                </value>
                <value>
                    <fullName>Spill / Leak / Damaged kit</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Authorized individual who reviewed the accessioning failure for this kit.</description>
        <inlineHelpText>Authorized individual who reviewed the accessioning failure for this kit.</inlineHelpText>
        <label>Failure Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Failure_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Accessioning_Scan__c</fullName>
        <description>This field is set the first time the Accession Status field is changed from null to ANY selection. Indicates that a kit has been received at the lab and is used to set the Inventory Transfer Date in Netsuite.</description>
        <inlineHelpText>This field is set the first time the Accession Status field is changed from null to ANY selection. Indicates that a kit has been received at the lab and is used to set the Inventory Transfer Date in Netsuite.</inlineHelpText>
        <label>First Accessioning Scan</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Used to group order product lines for transfer into netsuite sales order item groups</description>
        <inlineHelpText>Used to group order product lines for transfer into netsuite sales order item groups</inlineHelpText>
        <label>Group Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <description>Determines group type used for selecting item group number when creating sales orders</description>
        <inlineHelpText>Determines group type used for selecting item group number when creating sales orders</inlineHelpText>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App with Kit</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>App without Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <description>Hold reason captured during accessioning</description>
        <inlineHelpText>Hold reason captured during accessioning</inlineHelpText>
        <label>Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Missing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_In_Actual_Order_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True for Apps, Tax, S&amp;H. Set by WFR on Order Product Creation.</description>
        <inlineHelpText>True for Apps, Tax, S&amp;H. Set by WFR on Order Product Creation.</inlineHelpText>
        <label>Include In Actual Order Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrate_with_DNAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to run DNAG integration on selected records</description>
        <inlineHelpText>Used to run DNAG integration on selected records</inlineHelpText>
        <label>Integrate with DNAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Must be TRUE for Netsuite integration to proceed. Default value is TRUE for Production. Set to FALSE in Sandbox to prevent picking up unwanted records. If an error occurs during integration, this field value will set to FALSE to prevent repeated attempts on records with issues.</description>
        <inlineHelpText>Must be TRUE for Netsuite integration. Default is TRUE for Production. Set to FALSE in Sandbox to prevent passing unwanted records. If an integration error occurs , this field value will set to FALSE to prevent repeated attempts on problem records.</inlineHelpText>
        <label>Integrate with Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Transfer_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Netsuite Inventory Transfer record to lab was successfully created. Occurs after first Accession scan.</description>
        <inlineHelpText>Netsuite Inventory Transfer record to lab was successfully created. Occurs after first Accession scan.</inlineHelpText>
        <label>Inventory Transfer Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Transfer_ID__c</fullName>
        <description>Captures the NS Inventory Transfer internal ID.</description>
        <inlineHelpText>Captures the NS Inventory Transfer internal ID.</inlineHelpText>
        <label>Inventory Transfer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancellable__c</fullName>
        <description>Captures the value of the Product record field of the same name. Used in the Services Toolbox Cancel feature.</description>
        <formula>PricebookEntry.Product2.IsCancellationAllowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the value of the Product record field of the same name. Used in the Services Toolbox Cancel feature.</inlineHelpText>
        <label>Allow Cancellation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Receipt_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Netsuite Item Receipt record &quot;Out to Customer&quot; was successfully created. Occurs on kit shipment from kit supplier.</description>
        <inlineHelpText>Netsuite Item Receipt record &quot;Out to Customer&quot; was successfully created. Occurs on kit shipment from kit supplier.</inlineHelpText>
        <label>Item Receipt Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Receipt_ID__c</fullName>
        <description>Captures the Item Receipt internal ID.</description>
        <inlineHelpText>Captures the Item Receipt internal ID.</inlineHelpText>
        <label>Item Receipt ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_ID__c</fullName>
        <description>Kit barcode supplied by Kit Vendor</description>
        <externalId>true</externalId>
        <inlineHelpText>Kit barcode supplied by Kit Vendor</inlineHelpText>
        <label>Kit ID (Raw)</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kit_ID_formatted__c</fullName>
        <description>Formatted version of the Kit Barcode ID that includes dashes. This is a formula field that looks to the Kit_ID__c field where the data for Kit ID is directly entered without dashes.</description>
        <formula>LEFT(Kit_ID__c,3)&amp; &quot;-&quot;&amp; MID(Kit_ID__c,4,4) &amp; &quot;-&quot;&amp; RIGHT(Kit_ID__c,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formatted version of the Kit Barcode ID that includes dashes. This is a formula field that looks to the Kit_ID__c field where the data for Kit ID is directly entered without dashes.</inlineHelpText>
        <label>Kit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Addr1__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Addr1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Addr2__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Addr2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_City__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Company__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Country__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Error_Detail__c</fullName>
        <description>Error details related to the Order, if applicable, supplied by DNA Kit Supplier</description>
        <inlineHelpText>Error details related to the Order, if applicable, supplied by DNA Kit Supplier</inlineHelpText>
        <label>Kit Order Error Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kit_Order_ID__c</fullName>
        <description>Order ID supplied by Kit Supplier</description>
        <inlineHelpText>Order ID supplied by Kit Supplier</inlineHelpText>
        <label>Kit Order ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Phone__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Postal_Code__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Region__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Secondary_ID__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Order Secondary ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Shipped__c</fullName>
        <description>&quot;Shipped&quot; Date as supplied by DNAG via Boom Integration +9hrs via WFR</description>
        <inlineHelpText>&quot;Shipped&quot; Date as supplied by DNAG via Boom Integration +9hrs via WFR</inlineHelpText>
        <label>Kit Order Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Status_Number__c</fullName>
        <description>This number formula is used to convert the Kit Order Status field to a numeral for use by the Order record, via Rollup Summary Field, to show the Status on the Order.</description>
        <formula>IF(LEN(  Netsuite_Work_Order_Number__c )=0 &amp;&amp; NOT(ISBLANK( Kit_Order_Timestamp__c )),2,
IF(LEN( Netsuite_Work_Order_Number__c)=0 &amp;&amp; ISBLANK( Kit_Order_Timestamp__c ),1,
IF(LEN( Netsuite_Work_Order_Number__c )&gt;0 &amp;&amp; ISBLANK( Kit_Order_Timestamp__c ),3,
IF(LEN( Netsuite_Work_Order_Number__c)&gt;0 &amp;&amp; NOT(ISBLANK( Kit_Order_Timestamp__c )) &amp;&amp; LEN( Item_Receipt_ID__c)=0, 4, 
IF(LEN( Netsuite_Work_Order_Number__c)&gt;0 &amp;&amp; NOT(ISBLANK( Kit_Order_Timestamp__c )) &amp;&amp; LEN( Item_Receipt_ID__c )&gt;0 &amp;&amp; NOT(ISBLANK( Kit_Order_Shipped__c )) &amp;&amp; ISBLANK( Registered_Date__c ) , 5,  
IF(NOT(ISBLANK( Registered_Date__c )) &amp;&amp; ISBLANK( First_Accessioning_Scan__c ), 6,
IF(NOT(ISBLANK( First_Accessioning_Scan__c )) &amp;&amp; ISBLANK( Manifest_Upload_Date__c ) &amp;&amp;  Inventory_Transfer_Created__c = FALSE, 7,
IF(NOT(ISBLANK( First_Accessioning_Scan__c )) &amp;&amp; ISBLANK( Manifest_Upload_Date__c ) &amp;&amp; ISBLANK( Data_Delivery_Date__c) &amp;&amp;  Inventory_Transfer_Created__c = TRUE, 8, 
IF(NOT(ISBLANK( First_Accessioning_Scan__c )) &amp;&amp; NOT(ISBLANK( Manifest_Upload_Date__c )) &amp;&amp; ISBLANK( Data_Delivery_Date__c), 9, 
IF(NOT(ISBLANK( Data_Delivery_Date__c)), 10,
0))))))))))</formula>
        <inlineHelpText>This number formula is used to convert the Kit Order Status field to a numeral for use by the Order record, via Rollup Summary Field, to show the Status on the Order.</inlineHelpText>
        <label>Kit Order Status Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Status__c</fullName>
        <description>Order Status Supplied by Kit Supplier</description>
        <inlineHelpText>Order Status Supplied by Kit Supplier</inlineHelpText>
        <label>Kit Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_Order_Timestamp__c</fullName>
        <description>Order submission timestamp supplied by Kit Supplier</description>
        <inlineHelpText>Order submission timestamp supplied by Kit Supplier</inlineHelpText>
        <label>Kit Order Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kit_Order_Updated__c</fullName>
        <description>Date/Time of the last update for a kit order, supplied by the kit vendor.</description>
        <inlineHelpText>Date/Time of the last update for a kit order, supplied by the kit vendor.</inlineHelpText>
        <label>Kit Order Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Kit_Resend_Reason__c</fullName>
        <description>Captures the customer&apos;s reason for requesting a Kit Resend. A required field from the Services Toolbox.</description>
        <inlineHelpText>Captures the customer&apos;s reason for requesting a Kit Resend. A required field from the Services Toolbox.</inlineHelpText>
        <label>Kit Resend Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Issue</fullName>
                </value>
                <value>
                    <fullName>Preservative Issue</fullName>
                </value>
                <value>
                    <fullName>Registration Issue</fullName>
                </value>
                <value>
                    <fullName>Failed QC</fullName>
                </value>
                <value>
                    <fullName>Shipping Issue</fullName>
                </value>
                <value>
                    <fullName>Sequencing Fail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Accessioning Fail</fullName>
                </value>
                <value>
                    <fullName>Fail QC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Fail accessioning / sequencing</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Kit broken by customer</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Kit lost in transit</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Kit lost in transit on way to Lab</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_Ship_To_First_Name__c</fullName>
        <description>Value returned by Kit Supplier Order Submission Portal</description>
        <inlineHelpText>Value returned by Kit Supplier Order Submission Portal</inlineHelpText>
        <label>Kit Ship To First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Ship_To_Last_Name__c</fullName>
        <description>Value Supplied by Kit Supplier Order Interface</description>
        <inlineHelpText>Value Supplied by Kit Supplier Order Interface</inlineHelpText>
        <label>Kit Ship To Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Shipment_Lead_Time_Days__c</fullName>
        <description>Days from &quot;Kit Order Timestamp&quot; (order receipt) by DNAG to &quot;Kit Order Shipped&quot;</description>
        <formula>Kit_Order_Shipped__c - Kit_Order_Timestamp__c</formula>
        <inlineHelpText>Days from &quot;Kit Order Timestamp&quot; (order receipt) by DNAG to &quot;Kit Order Shipped&quot;</inlineHelpText>
        <label>Kit Shipment Lead Time(Days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kit_Shipped_Status_Date__c</fullName>
        <description>Date/Time when Kit Order Status is changed to &quot;Shipped&quot;. Will only update this field if blank.(via WFR)</description>
        <inlineHelpText>Date/Time when Kit Order Status is changed to &quot;Shipped&quot;. Will only update this field if blank.(via WFR)</inlineHelpText>
        <label>Kit Shipped Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Accessioning_Scan__c</fullName>
        <description>Date/Time of last accessioning scan into accessioning module</description>
        <inlineHelpText>Date/Time of last accessioning scan into accessioning module</inlineHelpText>
        <label>Last Accessioning Scan</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location where DNA Kit is scanned for accessioning. Populated based on Accession Location value on User.</description>
        <inlineHelpText>Location where DNA Kit is scanned for accessioning. Populated based on Accession Location value on User.</inlineHelpText>
        <label>Accession Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego : Production Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manifest_Upload_Date__c</fullName>
        <description>Captures Date/Time when Sample Status is set to Manifest Uploaded. Populated via Boomi Integration.</description>
        <inlineHelpText>Captures Date/Time when Sample Status is set to Manifest Uploaded. Populated via Boomi Integration.</inlineHelpText>
        <label>Manifest Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NS_Integration_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counter of number of automated NS integration retries attempted
Only certain specific error messages trigger retries.</description>
        <inlineHelpText>Counter of number of automated NS integration retries attempted
Only certain specific error messages trigger retries.</inlineHelpText>
        <label>NS Integration Retries</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Narwhal_Alpha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is a narwhal alpha kit line. Used for lab alert workflow.</description>
        <inlineHelpText>Indicates this is a narwhal alpha kit line. Used for lab alert workflow.</inlineHelpText>
        <label>Narwhal Alpha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <description>Calculates the Net Amount that remains from the Unit Price after refunds are accounted for.</description>
        <formula>IF(Total_Amount_Refunded__c &lt;&gt;0, UnitPrice -  Total_Amount_Refunded__c, UnitPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Net Amount that remains from the Unit Price after refunds are accounted for.</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Netsuite_Integration_Error_Details__c</fullName>
        <label>Netsuite Integration Error Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Netsuite_Purchase_Order_Number__c</fullName>
        <description>TranID supplied by Netsuite</description>
        <inlineHelpText>TranID supplied by Netsuite</inlineHelpText>
        <label>Netsuite Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netsuite_Work_Order_Number__c</fullName>
        <description>TranID Supplied by Netsuite</description>
        <inlineHelpText>TranID Supplied by Netsuite</inlineHelpText>
        <label>Netsuite Work Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OB_Tracking_Link__c</fullName>
        <formula>CASE( Carrier__c ,
&quot;Fedex&quot;,
HYPERLINK(&quot;https://www.fedex.com/insight/findit/nrp.jsp?tracknumbers=&quot;&amp; Outbound_Tracking_Number__c,Outbound_Tracking_Number__c),

&quot;UPS&quot;,
HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/processInputRequest?tracknum=&quot;&amp; Outbound_Tracking_Number__c &amp; &quot;&amp;track.x=32&amp;track.y=7&quot;, Outbound_Tracking_Number__c) ,

&quot;USPS&quot;,
HYPERLINK(&quot;http://trkcnfrm1.smi.usps.com/PTSInternetWeb/InterLabelInquiry.do?origTrackNum=&quot; &amp; Outbound_Tracking_Number__c,Outbound_Tracking_Number__c), &quot;&quot;)</formula>
        <label>Outbound Tracking Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Product Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Product_Status__c</fullName>
        <description>The primary Status field for this Order Product. It has values for Active, Cancelled, Resent, and Completed. Often set by automation.</description>
        <inlineHelpText>The primary Status field for this Order Product. It has values for Active, Cancelled, Resent, and Completed. Often set by automation.</inlineHelpText>
        <label>Order Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Resent</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Tracking_Number__c</fullName>
        <description>Tracking number supplied by kit supplier for shipment from supplier to end user.</description>
        <inlineHelpText>Tracking number supplied by kit supplier for shipment from supplier to end user.</inlineHelpText>
        <label>Outbound Tracking Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prep_Request__c</fullName>
        <formula>text( PricebookEntry.Product2.Prep_Request__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prep Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Accessioning_Status__c</fullName>
        <description>Captures prior value of the Accessioning Status field.</description>
        <inlineHelpText>Captures prior value of the Accessioning Status field.</inlineHelpText>
        <label>Previous Accessioning Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode_forIntegrations__c</fullName>
        <description>This field is necessary to pull through Product Code for manifest submission</description>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <label>ProductCode_forIntegrations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Applies to kit products only. Required field for Sample Manifest export integration. Project Name is generated for Kit Order Product Lines when Accession Status = PASS. The project name is the date of the Monday in the week the kit passes accessioning and the sample manifest is submitted.</description>
        <inlineHelpText>Applies to kit products only. Required field for Sample Manifest export integration. Project Name is generated for Kit Order Product Lines when Accession Status = PASS. The project name is the date of the Monday in the week the kit passes accessioning</inlineHelpText>
        <label>Project Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_URL__c</fullName>
        <formula>if( ISBLANK( Purchase_Order__c ),&quot;&quot;, &quot;https://system.na2.netsuite.com/app/accounting/transactions/purchord.nl?id=&quot;&amp;Purchase_Order__c &amp;&quot;&amp;whence=&quot;)</formula>
        <label>Purchase Order URL</label>
        <type>Text</type>
    </fields>
</CustomObject>